--- a/recipes/propital.html
+++ b/recipes/propital.html
@@ -8,6 +8,6 @@
 
     <body>
         <h1>Propital</h1>
-        <a href="recipes/recipename.html">Recipe Title</a>
+        <a href="../index.html">Home</a>
     </body>
 </html>
