--- a/recipes/goldenstar.html
+++ b/recipes/goldenstar.html
@@ -7,7 +7,13 @@
     </head>
 
     <body>
-        <h1>Golden Star Balm</h1>
         <a href="../index.html">Home</a>
+        <h1>Golden Star Balm</h1>
+
+
+        <!-- Description -->
+        <p>The famous Vietnamese "Golden Star" balm, also known as Cao Sao Vang, is made from essential oils like Camphor, Menthol, Peppermint, Cajuput, all mixed into vaseline. A small amount of the balm is applied to the sub-district and rubbing of the skin: for headache - the temples and the nape of the neck, with a cold - under the nostrils, the common cold - in the chest, back, abdomen, insect bites - on the place of bite. External use only!</p>
+
+        
     </body>
 </html>
