Add item images to their respective pages

--- a/recipes/sj6.html
+++ b/recipes/sj6.html
@@ -9,5 +9,6 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>SJ6</h1>
+        <img src="../images/Combat_stimulant_SJ6.png" alt="A picture of an SJ6 stimulant injector" height="300" width="300">
     </body>
 </html>
