--- a/recipes/propital.html
+++ b/recipes/propital.html
@@ -9,5 +9,6 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Propital</h1>
+        <img src="../images/Propital.png" alt="A picture of a Propital injector" height="300" width="300">
     </body>
 </html>
