--- a/recipes/propital.html
+++ b/recipes/propital.html
@@ -10,5 +10,8 @@
         <a href="../index.html">Home</a>
         <h1>Propital</h1>
         <img src="../images/Propital.png" alt="A picture of a Propital injector" height="300" width="300">
+
+        <!-- Description -->
+        <p>A military-issue stimulant permitted to only be used by medical officers and paramedics. It stimulates regeneration processes by increasing the biosynthesis of purine and pyrimidine bases, RNA, functional, and enzymatic cell elements. Increases metabolism, health, and vitality. Has continuous side effects. </p>
     </body>
 </html>
