Create links for goldenstar and sj6

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <body>
         <h1>Recipes</h1>
         <a href="recipes/propital.html">Propital</a>
+        <a href="recipes/goldenstar.html">Propital</a>
+        <a href="recipes/sj6.html">Propital</a>
     </body>
 </html>
