Fix incorrect names for goldenstar and sj6 links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Recipes</h1>
         <a href="recipes/propital.html">Propital</a>
-        <a href="recipes/goldenstar.html">Propital</a>
-        <a href="recipes/sj6.html">Propital</a>
+        <a href="recipes/goldenstar.html">Golden Star</a>
+        <a href="recipes/sj6.html">SJ6</a>
     </body>
 </html>
