Add ingredients and steps sections to SJ6

--- a/recipes/sj6.html
+++ b/recipes/sj6.html
@@ -13,5 +13,23 @@
 
         <!-- Description -->
         <p>A combat stimulant. It is used to increase the body abilities before combat. Stimulant is allowed to use by the special forces units. Developed by TerraGroup Labs, marked as SJ6. Has side effects. </p>
+
+        <!-- Ingredients -->
+        <H2>Ingredients</H2>
+        <ul>
+            <li>2x Meds</li>
+            <li>2x SJ1 Combat Stimulant</li>
+            <li>3x NaCl</li>
+            <li>4x Syringe</li>
+        </ul>
+
+        <!-- Steps -->
+        <h2>Steps</h2>
+        <ol>
+            <li>Mix 2x Meds with 2x SJ1</li>
+            <li>Dilute with NaCl</li>
+            <li>Stir gently for 30 mins</li>
+            <li>Load into Syringes</li>
+        </ol>
     </body>
 </html>
