Add ingredients and steps for goldenstar + prop

--- a/recipes/goldenstar.html
+++ b/recipes/goldenstar.html
@@ -14,6 +14,22 @@
         <!-- Description -->
         <p>The famous Vietnamese "Golden Star" balm, also known as Cao Sao Vang, is made from essential oils like Camphor, Menthol, Peppermint, Cajuput, all mixed into vaseline. A small amount of the balm is applied to the sub-district and rubbing of the skin: for headache - the temples and the nape of the neck, with a cold - under the nostrils, the common cold - in the chest, back, abdomen, insect bites - on the place of bite. External use only!</p>
 
+        <!-- Ingredients -->
+        <H2>Ingredients</H2>
+        <ul>
+            <li>2x Ibuprofen</li>
+            <li>2x Meds</li>
+            <li>1x Empty Container</li>
+        </ul>
+
+        <!-- Steps -->
+        <h2>Steps</h2>
+        <ol>
+            <li>Grind 2x Ibuprofen and 2x Meds together</li>
+            <li>Stir on high heat for 30 mins</li>
+            <li>Pour into Empty Container</li>
+        </ol>
+
 
     </body>
 </html>
