--- a/recipes/propital.html
+++ b/recipes/propital.html
@@ -13,5 +13,23 @@
 
         <!-- Description -->
         <p>A military-issue stimulant permitted to only be used by medical officers and paramedics. It stimulates regeneration processes by increasing the biosynthesis of purine and pyrimidine bases, RNA, functional, and enzymatic cell elements. Increases metabolism, health, and vitality. Has continuous side effects. </p>
+
+        <!-- Ingredients -->
+        <H2>Ingredients</H2>
+        <ul>
+            <li>1x Golden Star</li>
+            <li>2x Ibuprofen</li>
+            <li>2x Meds</li>
+            <li>4x Syringe</li>
+        </ul>
+
+        <!-- Steps -->
+        <h2>Steps</h2>
+        <ol>
+            <li>Grind 2x Ibuprofen and 2x Meds together</li>
+            <li>Stir on high heat for 30 mins</li>
+            <li>Slowly add an entire container of Golden Star</li>
+            <li>Load into Syringes</li>
+        </ol>
     </body>
 </html>
