Put links inside of list for organization

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
     <body>
         <h1>Recipes</h1>
-        <a href="recipes/propital.html">Propital</a>
-        <a href="recipes/goldenstar.html">Golden Star</a>
-        <a href="recipes/sj6.html">SJ6</a>
+        <ul>
+            <li><a href="recipes/propital.html">Propital</a></li>
+            <li><a href="recipes/goldenstar.html">Golden Star</a></li>
+            <li><a href="recipes/sj6.html">SJ6</a></li>
+        </ul>
     </body>
 </html>
