--- a/recipes/propital.html
+++ b/recipes/propital.html
@@ -17,7 +17,7 @@
         <!-- Ingredients -->
         <H2>Ingredients</H2>
         <ul>
-            <li>1x Golden Star</li>
+            <li>1x <a href="./goldenstar.html">Golden Star</a></li>
             <li>2x Ibuprofen</li>
             <li>2x Meds</li>
             <li>4x Syringe</li>
