Add recipes styling
Create and link recipes.css to recipe html files
Change up some fonts and colors to match homepage

--- a/recipes/propital.html
+++ b/recipes/propital.html
@@ -4,15 +4,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Propital</title>
+        <link rel="stylesheet" href="../assets/css/recipes.css">
     </head>
 
     <body>
-        <a href="../index.html">Home</a>
+        <a id="homelink" href="../index.html">Home</a>
         <h1>Propital</h1>
         <img src="../assets/images/Propital.png" alt="A picture of a Propital injector" height="300" width="300">
 
         <!-- Description -->
-        <p>A military-issue stimulant permitted to only be used by medical officers and paramedics. It stimulates regeneration processes by increasing the biosynthesis of purine and pyrimidine bases, RNA, functional, and enzymatic cell elements. Increases metabolism, health, and vitality. Has continuous side effects. </p>
+        <p id="desc">A military-issue stimulant permitted to only be used by medical officers and paramedics. It stimulates regeneration processes by increasing the biosynthesis of purine and pyrimidine bases, RNA, functional, and enzymatic cell elements. Increases metabolism, health, and vitality. Has continuous side effects. </p>
 
         <!-- Ingredients -->
         <H2>Ingredients</H2>
