--- a/recipes/sj6.html
+++ b/recipes/sj6.html
@@ -4,15 +4,16 @@
     <head>
         <meta charset="UTF-8">
         <title>SJ6</title>
+        <link rel="stylesheet" href="../assets/css/recipes.css">
     </head>
 
     <body>
-        <a href="../index.html">Home</a>
+        <a id="homelink" href="../index.html">Home</a>
         <h1>SJ6</h1>
         <img src="../assets/images/Combat_stimulant_SJ6.png" alt="A picture of an SJ6 stimulant injector" height="300" width="300">
 
         <!-- Description -->
-        <p>A combat stimulant. It is used to increase the body abilities before combat. Stimulant is allowed to use by the special forces units. Developed by TerraGroup Labs, marked as SJ6. Has side effects. </p>
+        <p id="desc">A combat stimulant. It is used to increase the body abilities before combat. Stimulant is allowed to use by the special forces units. Developed by TerraGroup Labs, marked as SJ6. Has side effects. </p>
 
         <!-- Ingredients -->
         <H2>Ingredients</H2>
